# OptiNLC

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  eigen_plot.gnuplot  requirements.OptiNLC.system
.github/workflows/: ci.yaml
OptiNLC/: CMakeLists.txt
OptiNLC/include/: OptiNLC_Data.h  OptiNLC_Engine.h  OptiNLC_Integrator.h  OptiNLC_LineSearch.h  OptiNLC_OCP.h  OptiNLC_Options.h  OptiNLC_QP.h  OptiNLC_SQP.h  OptiNLC_Solver.h
OptiNLC/src/: OptiNLC_test.cpp
OptiNLC/test/: .test_03_trajectoryTracker_NLMPC.cpp.swo  .test_03_trajectoryTracker_NLMPC.cpp.swp  fileCompare.h  install_for_vis.sh  test_01_invertedPendulum.cpp  test_02_trajectoryPlanner.cpp  test_03_trajectoryTracker.cpp  test_03_trajectoryTracker_NLMPC.cpp  test_04_datastructures.cpp  test_05_generalTests.cpp  test_06_options.cpp  test_07_invertedPendulumShort.cpp  test_07_result_visualization.py  tests.cpp
OptiNLC/test/expected_output/: eigen_data_01.txt  eigen_data_02.txt  eigen_data_07.txt
